# valv

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
contracts/http/: README.md  package.json
contracts/http/src/: batch.ts  index.ts
contracts/ipc/: README.md  package.json
contracts/ipc/src/: control.ts  fileprovider.ts  index.ts
contracts/sync/: README.md  eslint.config.js  package.json
contracts/sync/src/: delta.ts  index.ts  manifest.ts  ops.ts  realtime.ts
core/: .env.example  README.md  drizzle.pg.config.ts  drizzle.sqlite.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.smoke.config.ts
core/src/: index.ts  server.ts
core/src/auth/: auth.test.ts  device.test.ts  device.ts  index.ts
core/src/blobstore/: index.ts  (+2 more)
core/tests/: support.ts  test-helper.ts
crates/: Cargo.toml  README.md
crates/valv-cli/: Cargo.toml  README.md
crates/valv-cli/src/: app.rs  auth.rs  config.rs  daemon.rs  error.rs  format.rs  grants.rs  main.rs  paths.rs  table.rs  update.rs  update_notice.rs
crates/valv-sync/: Cargo.toml
crates/valv-sync/src/: config.rs  lib.rs  update.rs
crates/valv-sync/src/chunking/: mod.rs
crates/valv-sync/src/persistence/: chunks.rs  migrations.rs  mod.rs  mounts.rs  nodes.rs  schema.sql  versions.rs
crates/valv-sync/src/protocol/: http.rs  ipc.rs  mod.rs  sync.rs
crates/valv-sync/src/storage/: mod.rs
crates/valv-sync/src/sync_engine/: delta_pull.rs  local_push.rs  mod.rs  op_submit.rs  update_required.rs  ws_client.rs
crates/valv-sync/src/watch/: mod.rs
crates/valvd/: Cargo.toml
crates/valvd/src/: config.rs  control.rs  error.rs  fp.rs  launchd.rs  main.rs  mounts.rs  nodes.rs  path_resolution.rs  restore.rs  self_update.rs  systemd.rs  tasks.rs
e2e/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
e2e/api/: 01-device-auth.test.ts  02-folders.test.ts  03-ops.test.ts  04-delta-pull.test.ts  05-blobstore.test.ts  06-grants.test.ts  07-invites.test.ts  08-realtime.test.ts  09-conflicts.test.ts  10-gc.test.ts
e2e/setup/: api.ts  bucket.ts  helpers.ts  server.ts
e2e/smoke/: 01-mount-sync.sh  02-create-file.sh  03-create-folder.sh  04-edit-file.sh  05-delete-file.sh  06-rename-file.sh  07-two-device-sync.sh  08-conflict-copy.sh  09-grant-scope.sh  10-pause-resume.sh  11-delete-folder.sh  12-delete-offline.sh  13-two-device-delete.sh  14-scoped-delete.sh  15-materialize-tombstone.sh  16-move.sh  17-rename-folder.sh  18-version-history.sh  19-readonly-grant.sh  20-grant-revoke.sh  21-two-device-conflict.sh  22-realtime-sync.sh  23-empty-file.sh  24-deeply-nested-tree.sh  25-large-file.sh  26-special-names.sh  27-readonly-cannot-share.sh  28-daemon-share-routes.sh  29-mount-display-name.sh  30-unmount.sh  31-fp-rename-move.sh  32-offline-delete-no-resurrect.sh  33-unshare-other-principal.sh  34-headless-access-key-mount.sh  harness.sh  helpers.sh  run-all.sh  run-headless-linux.sh
macos/: appcast.xml
macos/DaemonKit/: Package.swift
macos/Valv/: README.md
macos/app/: README.md
macos/file-provider/: README.md
macos/scripts/: release-app.sh  reset-local-state.sh
scripts/: install.sh  sign-cli-binaries.sh
skills/valv-cli-usage/: SKILL.md
(+150 files in other folders)
